add_subdirectory(sequencing)

add_executable(LocalSearchSolver_example_knapsack_with_conflicts_main)
target_sources(LocalSearchSolver_example_knapsack_with_conflicts_main PRIVATE
    knapsack_with_conflicts_main.cpp)
target_include_directories(LocalSearchSolver_example_knapsack_with_conflicts_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(LocalSearchSolver_example_knapsack_with_conflicts_main PUBLIC
    LocalSearchSolver_localsearchsolver
    ORProblems::knapsack_with_conflicts
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_knapsack_with_conflicts_main PROPERTIES OUTPUT_NAME "localsearchsolver_knapsack_with_conflicts")
install(TARGETS LocalSearchSolver_example_knapsack_with_conflicts_main)

add_executable(LocalSearchSolver_example_multidimensional_multiple_choice_knapsack_main)
target_sources(LocalSearchSolver_example_multidimensional_multiple_choice_knapsack_main PRIVATE
    multidimensional_multiple_choice_knapsack_main.cpp)
target_include_directories(LocalSearchSolver_example_multidimensional_multiple_choice_knapsack_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(LocalSearchSolver_example_multidimensional_multiple_choice_knapsack_main PUBLIC
    LocalSearchSolver_localsearchsolver
    ORProblems::multidimensional_multiple_choice_knapsack
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_multidimensional_multiple_choice_knapsack_main PROPERTIES OUTPUT_NAME "localsearchsolver_multidimensional_multiple_choice_knapsack")
install(TARGETS LocalSearchSolver_example_multidimensional_multiple_choice_knapsack_main)

add_executable(LocalSearchSolver_example_permutation_flowshop_scheduling_makespan_main)
target_sources(LocalSearchSolver_example_permutation_flowshop_scheduling_makespan_main PRIVATE
    permutation_flowshop_scheduling_makespan_main.cpp)
target_include_directories(LocalSearchSolver_example_permutation_flowshop_scheduling_makespan_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(LocalSearchSolver_example_permutation_flowshop_scheduling_makespan_main PUBLIC
    LocalSearchSolver_localsearchsolver
    ORProblems::permutation_flowshop_scheduling_makespan
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_permutation_flowshop_scheduling_makespan_main PROPERTIES OUTPUT_NAME "localsearchsolver_permutation_flowshop_scheduling_makespan")
install(TARGETS LocalSearchSolver_example_permutation_flowshop_scheduling_makespan_main)

add_executable(LocalSearchSolver_example_quadratic_assignment_main)
target_sources(LocalSearchSolver_example_quadratic_assignment_main PRIVATE
    quadratic_assignment_main.cpp)
target_include_directories(LocalSearchSolver_example_quadratic_assignment_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(LocalSearchSolver_example_quadratic_assignment_main PUBLIC
    LocalSearchSolver_localsearchsolver
    ORProblems::quadratic_assignment
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_quadratic_assignment_main PROPERTIES OUTPUT_NAME "localsearchsolver_quadratic_assignment")
install(TARGETS LocalSearchSolver_example_quadratic_assignment_main)
