add_executable(LocalSearchSolver_example_batch_scheduling_total_weighted_tardiness_main)
target_sources(LocalSearchSolver_example_batch_scheduling_total_weighted_tardiness_main PRIVATE
    batch_scheduling_total_weighted_tardiness_main.cpp)
target_include_directories(LocalSearchSolver_example_batch_scheduling_total_weighted_tardiness_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_include_directories(LocalSearchSolver_example_batch_scheduling_total_weighted_tardiness_main PRIVATE
    ${PROJECT_SOURCE_DIR}/examples)
target_link_libraries(LocalSearchSolver_example_batch_scheduling_total_weighted_tardiness_main PUBLIC
    LocalSearchSolver_localsearchsolver
    ORProblems::batch_scheduling_total_weighted_tardiness
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_batch_scheduling_total_weighted_tardiness_main PROPERTIES OUTPUT_NAME "localsearchsolver_batch_scheduling_total_weighted_tardiness")
install(TARGETS LocalSearchSolver_example_batch_scheduling_total_weighted_tardiness_main)

add_executable(LocalSearchSolver_example_capacitated_vehicle_routing_main)
target_sources(LocalSearchSolver_example_capacitated_vehicle_routing_main PRIVATE
    capacitated_vehicle_routing_main.cpp)
target_include_directories(LocalSearchSolver_example_capacitated_vehicle_routing_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_include_directories(LocalSearchSolver_example_capacitated_vehicle_routing_main PRIVATE
    ${PROJECT_SOURCE_DIR}/examples)
target_link_libraries(LocalSearchSolver_example_capacitated_vehicle_routing_main PUBLIC
    LocalSearchSolver_localsearchsolver
    ORProblems::capacitated_vehicle_routing
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_capacitated_vehicle_routing_main PROPERTIES OUTPUT_NAME "localsearchsolver_capacitated_vehicle_routing")
install(TARGETS LocalSearchSolver_example_capacitated_vehicle_routing_main)

add_executable(LocalSearchSolver_example_distributed_pfss_tct_main)
target_sources(LocalSearchSolver_example_distributed_pfss_tct_main PRIVATE
    distributed_pfss_tct_main.cpp)
target_include_directories(LocalSearchSolver_example_distributed_pfss_tct_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_include_directories(LocalSearchSolver_example_distributed_pfss_tct_main PRIVATE
    ${PROJECT_SOURCE_DIR}/examples)
target_link_libraries(LocalSearchSolver_example_distributed_pfss_tct_main PUBLIC
    LocalSearchSolver_localsearchsolver
    ORProblems::distributed_pfss_tct
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_distributed_pfss_tct_main PROPERTIES OUTPUT_NAME "localsearchsolver_distributed_pfss_tct")
install(TARGETS LocalSearchSolver_example_distributed_pfss_tct_main)

add_executable(LocalSearchSolver_example_job_sequencing_and_tool_switching_main)
target_sources(LocalSearchSolver_example_job_sequencing_and_tool_switching_main PRIVATE
    job_sequencing_and_tool_switching_main.cpp)
target_include_directories(LocalSearchSolver_example_job_sequencing_and_tool_switching_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_include_directories(LocalSearchSolver_example_job_sequencing_and_tool_switching_main PRIVATE
    ${PROJECT_SOURCE_DIR}/examples)
target_link_libraries(LocalSearchSolver_example_job_sequencing_and_tool_switching_main PUBLIC
    LocalSearchSolver_localsearchsolver
    ORProblems::job_sequencing_and_tool_switching
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_job_sequencing_and_tool_switching_main PROPERTIES OUTPUT_NAME "localsearchsolver_job_sequencing_and_tool_switching")
install(TARGETS LocalSearchSolver_example_job_sequencing_and_tool_switching_main)

add_executable(LocalSearchSolver_example_order_acceptance_and_scheduling_main)
target_sources(LocalSearchSolver_example_order_acceptance_and_scheduling_main PRIVATE
    order_acceptance_and_scheduling_main.cpp)
target_include_directories(LocalSearchSolver_example_order_acceptance_and_scheduling_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_include_directories(LocalSearchSolver_example_order_acceptance_and_scheduling_main PRIVATE
    ${PROJECT_SOURCE_DIR}/examples)
target_link_libraries(LocalSearchSolver_example_order_acceptance_and_scheduling_main PUBLIC
    LocalSearchSolver_localsearchsolver
    ORProblems::order_acceptance_and_scheduling
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_order_acceptance_and_scheduling_main PROPERTIES OUTPUT_NAME "localsearchsolver_order_acceptance_and_scheduling")
install(TARGETS LocalSearchSolver_example_order_acceptance_and_scheduling_main)

add_executable(LocalSearchSolver_example_permutation_flowshop_scheduling_tct_main)
target_sources(LocalSearchSolver_example_permutation_flowshop_scheduling_tct_main PRIVATE
    permutation_flowshop_scheduling_tct_main.cpp)
target_include_directories(LocalSearchSolver_example_permutation_flowshop_scheduling_tct_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_include_directories(LocalSearchSolver_example_permutation_flowshop_scheduling_tct_main PRIVATE
    ${PROJECT_SOURCE_DIR}/examples)
target_link_libraries(LocalSearchSolver_example_permutation_flowshop_scheduling_tct_main PUBLIC
    LocalSearchSolver_localsearchsolver
    ORProblems::permutation_flowshop_scheduling_tct
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_permutation_flowshop_scheduling_tct_main PROPERTIES OUTPUT_NAME "localsearchsolver_permutation_flowshop_scheduling_tct")
install(TARGETS LocalSearchSolver_example_permutation_flowshop_scheduling_tct_main)

add_executable(LocalSearchSolver_example_permutation_flowshop_scheduling_tt_main)
target_sources(LocalSearchSolver_example_permutation_flowshop_scheduling_tt_main PRIVATE
    permutation_flowshop_scheduling_tt_main.cpp)
target_include_directories(LocalSearchSolver_example_permutation_flowshop_scheduling_tt_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_include_directories(LocalSearchSolver_example_permutation_flowshop_scheduling_tt_main PRIVATE
    ${PROJECT_SOURCE_DIR}/examples)
target_link_libraries(LocalSearchSolver_example_permutation_flowshop_scheduling_tt_main PUBLIC
    LocalSearchSolver_localsearchsolver
    ORProblems::permutation_flowshop_scheduling_tt
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_permutation_flowshop_scheduling_tt_main PROPERTIES OUTPUT_NAME "localsearchsolver_permutation_flowshop_scheduling_tt")
install(TARGETS LocalSearchSolver_example_permutation_flowshop_scheduling_tt_main)

add_executable(LocalSearchSolver_example_scheduling_with_sdst_twt_main)
target_sources(LocalSearchSolver_example_scheduling_with_sdst_twt_main PRIVATE
    scheduling_with_sdst_twt_main.cpp)
target_include_directories(LocalSearchSolver_example_scheduling_with_sdst_twt_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_include_directories(LocalSearchSolver_example_scheduling_with_sdst_twt_main PRIVATE
    ${PROJECT_SOURCE_DIR}/examples)
target_link_libraries(LocalSearchSolver_example_scheduling_with_sdst_twt_main PUBLIC
    LocalSearchSolver_localsearchsolver
    ORProblems::scheduling_with_sdst_twt
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_scheduling_with_sdst_twt_main PROPERTIES OUTPUT_NAME "localsearchsolver_scheduling_with_sdst_twt")
install(TARGETS LocalSearchSolver_example_scheduling_with_sdst_twt_main)

add_executable(LocalSearchSolver_example_sequential_ordering_main)
target_sources(LocalSearchSolver_example_sequential_ordering_main PRIVATE
    sequential_ordering_main.cpp)
target_include_directories(LocalSearchSolver_example_sequential_ordering_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_include_directories(LocalSearchSolver_example_sequential_ordering_main PRIVATE
    ${PROJECT_SOURCE_DIR}/examples)
target_link_libraries(LocalSearchSolver_example_sequential_ordering_main PUBLIC
    LocalSearchSolver_localsearchsolver
    ORProblems::sequential_ordering
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_sequential_ordering_main PROPERTIES OUTPUT_NAME "localsearchsolver_sequential_ordering")
install(TARGETS LocalSearchSolver_example_sequential_ordering_main)

add_executable(LocalSearchSolver_example_team_orienteering_main)
target_sources(LocalSearchSolver_example_team_orienteering_main PRIVATE
    team_orienteering_main.cpp)
target_include_directories(LocalSearchSolver_example_team_orienteering_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_include_directories(LocalSearchSolver_example_team_orienteering_main PRIVATE
    ${PROJECT_SOURCE_DIR}/examples)
target_link_libraries(LocalSearchSolver_example_team_orienteering_main PUBLIC
    LocalSearchSolver_localsearchsolver
    ORProblems::team_orienteering
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_team_orienteering_main PROPERTIES OUTPUT_NAME "localsearchsolver_team_orienteering")
install(TARGETS LocalSearchSolver_example_team_orienteering_main)

add_executable(LocalSearchSolver_example_time_dependent_orienteering_main)
target_sources(LocalSearchSolver_example_time_dependent_orienteering_main PRIVATE
    time_dependent_orienteering_main.cpp)
target_include_directories(LocalSearchSolver_example_time_dependent_orienteering_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_include_directories(LocalSearchSolver_example_time_dependent_orienteering_main PRIVATE
    ${PROJECT_SOURCE_DIR}/examples)
target_link_libraries(LocalSearchSolver_example_time_dependent_orienteering_main PUBLIC
    LocalSearchSolver_localsearchsolver
    ORProblems::time_dependent_orienteering
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_time_dependent_orienteering_main PROPERTIES OUTPUT_NAME "localsearchsolver_time_dependent_orienteering")
install(TARGETS LocalSearchSolver_example_time_dependent_orienteering_main)

add_executable(LocalSearchSolver_example_traveling_repairman_main)
target_sources(LocalSearchSolver_example_traveling_repairman_main PRIVATE
    traveling_repairman_main.cpp)
target_include_directories(LocalSearchSolver_example_traveling_repairman_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_include_directories(LocalSearchSolver_example_traveling_repairman_main PRIVATE
    ${PROJECT_SOURCE_DIR}/examples)
target_link_libraries(LocalSearchSolver_example_traveling_repairman_main PUBLIC
    LocalSearchSolver_localsearchsolver
    ORProblems::traveling_repairman
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_traveling_repairman_main PROPERTIES OUTPUT_NAME "localsearchsolver_traveling_repairman")
install(TARGETS LocalSearchSolver_example_traveling_repairman_main)

add_executable(LocalSearchSolver_example_traveling_salesman_with_release_dates_main)
target_sources(LocalSearchSolver_example_traveling_salesman_with_release_dates_main PRIVATE
    traveling_salesman_with_release_dates_main.cpp)
target_include_directories(LocalSearchSolver_example_traveling_salesman_with_release_dates_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_include_directories(LocalSearchSolver_example_traveling_salesman_with_release_dates_main PRIVATE
    ${PROJECT_SOURCE_DIR}/examples)
target_link_libraries(LocalSearchSolver_example_traveling_salesman_with_release_dates_main PUBLIC
    LocalSearchSolver_localsearchsolver
    ORProblems::traveling_salesman_with_release_dates
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_traveling_salesman_with_release_dates_main PROPERTIES OUTPUT_NAME "localsearchsolver_traveling_salesman_with_release_dates")
install(TARGETS LocalSearchSolver_example_traveling_salesman_with_release_dates_main)

add_executable(LocalSearchSolver_example_vehicle_routing_with_time_windows_main)
target_sources(LocalSearchSolver_example_vehicle_routing_with_time_windows_main PRIVATE
    vehicle_routing_with_time_windows_main.cpp)
target_include_directories(LocalSearchSolver_example_vehicle_routing_with_time_windows_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_include_directories(LocalSearchSolver_example_vehicle_routing_with_time_windows_main PRIVATE
    ${PROJECT_SOURCE_DIR}/examples)
target_link_libraries(LocalSearchSolver_example_vehicle_routing_with_time_windows_main PUBLIC
    LocalSearchSolver_localsearchsolver
    ORProblems::vehicle_routing_with_time_windows
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_vehicle_routing_with_time_windows_main PROPERTIES OUTPUT_NAME "localsearchsolver_vehicle_routing_with_time_windows")
install(TARGETS LocalSearchSolver_example_vehicle_routing_with_time_windows_main)
