add_library(LocalSearchSolver_read_args INTERFACE)
target_link_libraries(LocalSearchSolver_read_args INTERFACE
    LocalSearchSolver_localsearchsolver)
target_include_directories(LocalSearchSolver_read_args INTERFACE
    ${PROJECT_SOURCE_DIR}/include)


add_library(LocalSearchSolver_example_knapsack_with_conflicts INTERFACE)
target_link_libraries(LocalSearchSolver_example_knapsack_with_conflicts INTERFACE
    LocalSearchSolver_read_args
    ORProblems::knapsack_with_conflicts)
target_include_directories(LocalSearchSolver_example_knapsack_with_conflicts INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(LocalSearchSolver::examples::knapsack_with_conflicts ALIAS LocalSearchSolver_example_knapsack_with_conflicts)

add_executable(LocalSearchSolver_example_knapsack_with_conflicts_main)
target_sources(LocalSearchSolver_example_knapsack_with_conflicts_main PRIVATE
    knapsack_with_conflicts_main.cpp)
target_link_libraries(LocalSearchSolver_example_knapsack_with_conflicts_main PUBLIC
    LocalSearchSolver_example_knapsack_with_conflicts
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_knapsack_with_conflicts_main PROPERTIES OUTPUT_NAME "localsearchsolver_knapsack_with_conflicts")
install(TARGETS LocalSearchSolver_example_knapsack_with_conflicts_main)


add_library(LocalSearchSolver_example_multidimensional_multiple_choice_knapsack INTERFACE)
target_link_libraries(LocalSearchSolver_example_multidimensional_multiple_choice_knapsack INTERFACE
    LocalSearchSolver_read_args
    ORProblems::multidimensional_multiple_choice_knapsack)
target_include_directories(LocalSearchSolver_example_multidimensional_multiple_choice_knapsack INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(LocalSearchSolver::examples::multidimensional_multiple_choice_knapsack ALIAS LocalSearchSolver_example_multidimensional_multiple_choice_knapsack)

add_executable(LocalSearchSolver_example_multidimensional_multiple_choice_knapsack_main)
target_sources(LocalSearchSolver_example_multidimensional_multiple_choice_knapsack_main PRIVATE
    multidimensional_multiple_choice_knapsack_main.cpp)
target_link_libraries(LocalSearchSolver_example_multidimensional_multiple_choice_knapsack_main PUBLIC
    LocalSearchSolver_example_multidimensional_multiple_choice_knapsack
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_multidimensional_multiple_choice_knapsack_main PROPERTIES OUTPUT_NAME "localsearchsolver_multidimensional_multiple_choice_knapsack")
install(TARGETS LocalSearchSolver_example_multidimensional_multiple_choice_knapsack_main)


add_library(LocalSearchSolver_example_quadratic_assignment INTERFACE)
target_link_libraries(LocalSearchSolver_example_quadratic_assignment INTERFACE
    LocalSearchSolver_read_args
    ORProblems::quadratic_assignment)
target_include_directories(LocalSearchSolver_example_quadratic_assignment INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(LocalSearchSolver::examples::quadratic_assignment ALIAS LocalSearchSolver_example_quadratic_assignment)

add_executable(LocalSearchSolver_example_quadratic_assignment_main)
target_sources(LocalSearchSolver_example_quadratic_assignment_main PRIVATE
    quadratic_assignment_main.cpp)
target_link_libraries(LocalSearchSolver_example_quadratic_assignment_main PUBLIC
    LocalSearchSolver_example_quadratic_assignment
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_quadratic_assignment_main PROPERTIES OUTPUT_NAME "localsearchsolver_quadratic_assignment")
install(TARGETS LocalSearchSolver_example_quadratic_assignment_main)


add_library(LocalSearchSolver_example_sequential_ordering INTERFACE)
target_link_libraries(LocalSearchSolver_example_sequential_ordering INTERFACE
    LocalSearchSolver_read_args
    ORProblems::sequential_ordering)
target_include_directories(LocalSearchSolver_example_sequential_ordering INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(LocalSearchSolver::examples::sequential_ordering ALIAS LocalSearchSolver_example_sequential_ordering)

add_executable(LocalSearchSolver_example_sequential_ordering_main)
target_sources(LocalSearchSolver_example_sequential_ordering_main PRIVATE
    sequential_ordering_main.cpp)
target_link_libraries(LocalSearchSolver_example_sequential_ordering_main PUBLIC
    LocalSearchSolver_example_sequential_ordering
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_sequential_ordering_main PROPERTIES OUTPUT_NAME "localsearchsolver_sequential_ordering")
install(TARGETS LocalSearchSolver_example_sequential_ordering_main)


add_library(LocalSearchSolver_example_scheduling_with_sdst_twt INTERFACE)
target_link_libraries(LocalSearchSolver_example_scheduling_with_sdst_twt INTERFACE
    LocalSearchSolver_read_args
    ORProblems::scheduling_with_sdst_twt)
target_include_directories(LocalSearchSolver_example_scheduling_with_sdst_twt INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(LocalSearchSolver::examples::scheduling_with_sdst_twt ALIAS LocalSearchSolver_example_scheduling_with_sdst_twt)

add_executable(LocalSearchSolver_example_scheduling_with_sdst_twt_main)
target_sources(LocalSearchSolver_example_scheduling_with_sdst_twt_main PRIVATE
    scheduling_with_sdst_twt_main.cpp)
target_link_libraries(LocalSearchSolver_example_scheduling_with_sdst_twt_main PUBLIC
    LocalSearchSolver_example_scheduling_with_sdst_twt
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_scheduling_with_sdst_twt_main PROPERTIES OUTPUT_NAME "localsearchsolver_scheduling_with_sdst_twt")
install(TARGETS LocalSearchSolver_example_scheduling_with_sdst_twt_main)


add_library(LocalSearchSolver_example_order_acceptance_and_scheduling INTERFACE)
target_link_libraries(LocalSearchSolver_example_order_acceptance_and_scheduling INTERFACE
    LocalSearchSolver_read_args
    ORProblems::order_acceptance_and_scheduling)
target_include_directories(LocalSearchSolver_example_order_acceptance_and_scheduling INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(LocalSearchSolver::examples::order_acceptance_and_scheduling ALIAS LocalSearchSolver_example_order_acceptance_and_scheduling)

add_executable(LocalSearchSolver_example_order_acceptance_and_scheduling_main)
target_sources(LocalSearchSolver_example_order_acceptance_and_scheduling_main PRIVATE
    order_acceptance_and_scheduling_main.cpp)
target_link_libraries(LocalSearchSolver_example_order_acceptance_and_scheduling_main PUBLIC
    LocalSearchSolver_example_order_acceptance_and_scheduling
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_order_acceptance_and_scheduling_main PROPERTIES OUTPUT_NAME "localsearchsolver_order_acceptance_and_scheduling")
install(TARGETS LocalSearchSolver_example_order_acceptance_and_scheduling_main)


add_library(LocalSearchSolver_example_job_sequencing_and_tool_switching INTERFACE)
target_link_libraries(LocalSearchSolver_example_job_sequencing_and_tool_switching INTERFACE
    LocalSearchSolver_read_args
    ORProblems::job_sequencing_and_tool_switching)
target_include_directories(LocalSearchSolver_example_job_sequencing_and_tool_switching INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(LocalSearchSolver::examples::job_sequencing_and_tool_switching ALIAS LocalSearchSolver_example_job_sequencing_and_tool_switching)

add_executable(LocalSearchSolver_example_job_sequencing_and_tool_switching_main)
target_sources(LocalSearchSolver_example_job_sequencing_and_tool_switching_main PRIVATE
    job_sequencing_and_tool_switching_main.cpp)
target_link_libraries(LocalSearchSolver_example_job_sequencing_and_tool_switching_main PUBLIC
    LocalSearchSolver_example_job_sequencing_and_tool_switching
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_job_sequencing_and_tool_switching_main PROPERTIES OUTPUT_NAME "localsearchsolver_job_sequencing_and_tool_switching")
install(TARGETS LocalSearchSolver_example_job_sequencing_and_tool_switching_main)


add_library(LocalSearchSolver_example_time_dependent_orienteering INTERFACE)
target_link_libraries(LocalSearchSolver_example_time_dependent_orienteering INTERFACE
    LocalSearchSolver_read_args
    ORProblems::time_dependent_orienteering)
target_include_directories(LocalSearchSolver_example_time_dependent_orienteering INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(LocalSearchSolver::examples::time_dependent_orienteering ALIAS LocalSearchSolver_example_time_dependent_orienteering)

add_executable(LocalSearchSolver_example_time_dependent_orienteering_main)
target_sources(LocalSearchSolver_example_time_dependent_orienteering_main PRIVATE
    time_dependent_orienteering_main.cpp)
target_link_libraries(LocalSearchSolver_example_time_dependent_orienteering_main PUBLIC
    LocalSearchSolver_example_time_dependent_orienteering
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_time_dependent_orienteering_main PROPERTIES OUTPUT_NAME "localsearchsolver_time_dependent_orienteering")
install(TARGETS LocalSearchSolver_example_time_dependent_orienteering_main)


add_library(LocalSearchSolver_example_permutation_flowshop_scheduling_makespan INTERFACE)
target_link_libraries(LocalSearchSolver_example_permutation_flowshop_scheduling_makespan INTERFACE
    LocalSearchSolver_read_args
    ORProblems::permutation_flowshop_scheduling_makespan)
target_include_directories(LocalSearchSolver_example_permutation_flowshop_scheduling_makespan INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(LocalSearchSolver::examples::permutation_flowshop_scheduling_makespan ALIAS LocalSearchSolver_example_permutation_flowshop_scheduling_makespan)

add_executable(LocalSearchSolver_example_permutation_flowshop_scheduling_makespan_main)
target_sources(LocalSearchSolver_example_permutation_flowshop_scheduling_makespan_main PRIVATE
    permutation_flowshop_scheduling_makespan_main.cpp)
target_link_libraries(LocalSearchSolver_example_permutation_flowshop_scheduling_makespan_main PUBLIC
    LocalSearchSolver_example_permutation_flowshop_scheduling_makespan
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_permutation_flowshop_scheduling_makespan_main PROPERTIES OUTPUT_NAME "localsearchsolver_permutation_flowshop_scheduling_makespan")
install(TARGETS LocalSearchSolver_example_permutation_flowshop_scheduling_makespan_main)


add_library(LocalSearchSolver_example_permutation_flowshop_scheduling_tct INTERFACE)
target_link_libraries(LocalSearchSolver_example_permutation_flowshop_scheduling_tct INTERFACE
    LocalSearchSolver_read_args
    ORProblems::permutation_flowshop_scheduling_tct)
target_include_directories(LocalSearchSolver_example_permutation_flowshop_scheduling_tct INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(LocalSearchSolver::examples::permutation_flowshop_scheduling_tct ALIAS LocalSearchSolver_example_permutation_flowshop_scheduling_tct)

add_executable(LocalSearchSolver_example_permutation_flowshop_scheduling_tct_main)
target_sources(LocalSearchSolver_example_permutation_flowshop_scheduling_tct_main PRIVATE
    permutation_flowshop_scheduling_tct_main.cpp)
target_link_libraries(LocalSearchSolver_example_permutation_flowshop_scheduling_tct_main PUBLIC
    LocalSearchSolver_example_permutation_flowshop_scheduling_tct
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_permutation_flowshop_scheduling_tct_main PROPERTIES OUTPUT_NAME "localsearchsolver_permutation_flowshop_scheduling_tct")
install(TARGETS LocalSearchSolver_example_permutation_flowshop_scheduling_tct_main)


add_library(LocalSearchSolver_example_permutation_flowshop_scheduling_tt INTERFACE)
target_link_libraries(LocalSearchSolver_example_permutation_flowshop_scheduling_tt INTERFACE
    LocalSearchSolver_read_args
    ORProblems::permutation_flowshop_scheduling_tt)
target_include_directories(LocalSearchSolver_example_permutation_flowshop_scheduling_tt INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(LocalSearchSolver::examples::permutation_flowshop_scheduling_tt ALIAS LocalSearchSolver_example_permutation_flowshop_scheduling_tt)

add_executable(LocalSearchSolver_example_permutation_flowshop_scheduling_tt_main)
target_sources(LocalSearchSolver_example_permutation_flowshop_scheduling_tt_main PRIVATE
    permutation_flowshop_scheduling_tt_main.cpp)
target_link_libraries(LocalSearchSolver_example_permutation_flowshop_scheduling_tt_main PUBLIC
    LocalSearchSolver_example_permutation_flowshop_scheduling_tt
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_permutation_flowshop_scheduling_tt_main PROPERTIES OUTPUT_NAME "localsearchsolver_permutation_flowshop_scheduling_tt")
install(TARGETS LocalSearchSolver_example_permutation_flowshop_scheduling_tt_main)


add_library(LocalSearchSolver_example_distributed_pfss_tct INTERFACE)
target_link_libraries(LocalSearchSolver_example_distributed_pfss_tct INTERFACE
    LocalSearchSolver_read_args
    ORProblems::distributed_pfss_tct)
target_include_directories(LocalSearchSolver_example_distributed_pfss_tct INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(LocalSearchSolver::examples::distributed_pfss_tct ALIAS LocalSearchSolver_example_distributed_pfss_tct)

add_executable(LocalSearchSolver_example_distributed_pfss_tct_main)
target_sources(LocalSearchSolver_example_distributed_pfss_tct_main PRIVATE
    distributed_pfss_tct_main.cpp)
target_link_libraries(LocalSearchSolver_example_distributed_pfss_tct_main PUBLIC
    LocalSearchSolver_example_distributed_pfss_tct
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_distributed_pfss_tct_main PROPERTIES OUTPUT_NAME "localsearchsolver_distributed_pfss_tct")
install(TARGETS LocalSearchSolver_example_distributed_pfss_tct_main)


add_library(LocalSearchSolver_example_traveling_repairman INTERFACE)
target_link_libraries(LocalSearchSolver_example_traveling_repairman INTERFACE
    LocalSearchSolver_read_args
    ORProblems::traveling_repairman)
target_include_directories(LocalSearchSolver_example_traveling_repairman INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(LocalSearchSolver::examples::traveling_repairman ALIAS LocalSearchSolver_example_traveling_repairman)

add_executable(LocalSearchSolver_example_traveling_repairman_main)
target_sources(LocalSearchSolver_example_traveling_repairman_main PRIVATE
    traveling_repairman_main.cpp)
target_link_libraries(LocalSearchSolver_example_traveling_repairman_main PUBLIC
    LocalSearchSolver_example_traveling_repairman
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_traveling_repairman_main PROPERTIES OUTPUT_NAME "localsearchsolver_traveling_repairman")
install(TARGETS LocalSearchSolver_example_traveling_repairman_main)


add_library(LocalSearchSolver_example_capacitated_vehicle_routing INTERFACE)
target_link_libraries(LocalSearchSolver_example_capacitated_vehicle_routing INTERFACE
    LocalSearchSolver_read_args
    ORProblems::capacitated_vehicle_routing)
target_include_directories(LocalSearchSolver_example_capacitated_vehicle_routing INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(LocalSearchSolver::examples::capacitated_vehicle_routing ALIAS LocalSearchSolver_example_knapsack_with_conflicts)

add_executable(LocalSearchSolver_example_capacitated_vehicle_routing_main)
target_sources(LocalSearchSolver_example_capacitated_vehicle_routing_main PRIVATE
    capacitated_vehicle_routing_main.cpp)
target_link_libraries(LocalSearchSolver_example_capacitated_vehicle_routing_main PUBLIC
    LocalSearchSolver_example_capacitated_vehicle_routing
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_capacitated_vehicle_routing_main PROPERTIES OUTPUT_NAME "localsearchsolver_capacitated_vehicle_routing")
install(TARGETS LocalSearchSolver_example_capacitated_vehicle_routing_main)

add_executable(LocalSearchSolver_example_capacitated_vehicle_routing_dimacs_main)
target_sources(LocalSearchSolver_example_capacitated_vehicle_routing_dimacs_main PRIVATE
    capacitated_vehicle_routing_dimacs_main.cpp)
target_link_libraries(LocalSearchSolver_example_capacitated_vehicle_routing_dimacs_main PUBLIC
    LocalSearchSolver_example_capacitated_vehicle_routing
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_capacitated_vehicle_routing_dimacs_main PROPERTIES OUTPUT_NAME "localsearchsolver_capacitated_vehicle_routing_dimacs")
install(TARGETS LocalSearchSolver_example_capacitated_vehicle_routing_dimacs_main)


add_library(LocalSearchSolver_example_vehicle_routing_with_time_windows INTERFACE)
target_link_libraries(LocalSearchSolver_example_vehicle_routing_with_time_windows INTERFACE
    LocalSearchSolver_read_args
    ORProblems::vehicle_routing_with_time_windows)
target_include_directories(LocalSearchSolver_example_vehicle_routing_with_time_windows INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(LocalSearchSolver::examples::vehicle_routing_with_time_windows ALIAS LocalSearchSolver_example_vehicle_routing_with_time_windows)

add_executable(LocalSearchSolver_example_vehicle_routing_with_time_windows_main)
target_sources(LocalSearchSolver_example_vehicle_routing_with_time_windows_main PRIVATE
    vehicle_routing_with_time_windows_main.cpp)
target_link_libraries(LocalSearchSolver_example_vehicle_routing_with_time_windows_main PUBLIC
    LocalSearchSolver_example_vehicle_routing_with_time_windows
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_vehicle_routing_with_time_windows_main PROPERTIES OUTPUT_NAME "localsearchsolver_vehicle_routing_with_time_windows")
install(TARGETS LocalSearchSolver_example_vehicle_routing_with_time_windows_main)

add_executable(LocalSearchSolver_example_vehicle_routing_with_time_windows_dimacs_main)
target_sources(LocalSearchSolver_example_vehicle_routing_with_time_windows_dimacs_main PRIVATE
    vehicle_routing_with_time_windows_dimacs_main.cpp)
target_link_libraries(LocalSearchSolver_example_vehicle_routing_with_time_windows_dimacs_main PUBLIC
    LocalSearchSolver_example_vehicle_routing_with_time_windows
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_vehicle_routing_with_time_windows_dimacs_main PROPERTIES OUTPUT_NAME "localsearchsolver_vehicle_routing_with_time_windows_dimacs")
install(TARGETS LocalSearchSolver_example_vehicle_routing_with_time_windows_dimacs_main)


add_library(LocalSearchSolver_example_team_orienteering INTERFACE)
target_link_libraries(LocalSearchSolver_example_team_orienteering INTERFACE
    LocalSearchSolver_read_args
    ORProblems::team_orienteering)
target_include_directories(LocalSearchSolver_example_team_orienteering INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(LocalSearchSolver::examples::team_orienteering ALIAS LocalSearchSolver_example_team_orienteering)

add_executable(LocalSearchSolver_example_team_orienteering_main)
target_sources(LocalSearchSolver_example_team_orienteering_main PRIVATE
    team_orienteering_main.cpp)
target_link_libraries(LocalSearchSolver_example_team_orienteering_main PUBLIC
    LocalSearchSolver_example_team_orienteering
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_team_orienteering_main PROPERTIES OUTPUT_NAME "localsearchsolver_team_orienteering")
install(TARGETS LocalSearchSolver_example_team_orienteering_main)


add_library(LocalSearchSolver_example_traveling_salesman_with_release_dates INTERFACE)
target_link_libraries(LocalSearchSolver_example_traveling_salesman_with_release_dates INTERFACE
    LocalSearchSolver_read_args
    ORProblems::traveling_salesman_with_release_dates)
target_include_directories(LocalSearchSolver_example_traveling_salesman_with_release_dates INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(LocalSearchSolver::examples::traveling_salesman_with_release_dates ALIAS LocalSearchSolver_example_traveling_salesman_with_release_dates)

add_executable(LocalSearchSolver_example_traveling_salesman_with_release_dates_main)
target_sources(LocalSearchSolver_example_traveling_salesman_with_release_dates_main PRIVATE
    traveling_salesman_with_release_dates_main.cpp)
target_link_libraries(LocalSearchSolver_example_traveling_salesman_with_release_dates_main PUBLIC
    LocalSearchSolver_example_traveling_salesman_with_release_dates
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_traveling_salesman_with_release_dates_main PROPERTIES OUTPUT_NAME "localsearchsolver_traveling_salesman_with_release_dates")
install(TARGETS LocalSearchSolver_example_traveling_salesman_with_release_dates_main)


add_library(LocalSearchSolver_example_batch_scheduling_total_weighted_tardiness INTERFACE)
target_link_libraries(LocalSearchSolver_example_batch_scheduling_total_weighted_tardiness INTERFACE
    LocalSearchSolver_read_args
    ORProblems::batch_scheduling_total_weighted_tardiness)
target_include_directories(LocalSearchSolver_example_batch_scheduling_total_weighted_tardiness INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(LocalSearchSolver::examples::batch_scheduling_total_weighted_tardiness ALIAS LocalSearchSolver_example_batch_scheduling_total_weighted_tardiness)

add_executable(LocalSearchSolver_example_batch_scheduling_total_weighted_tardiness_main)
target_sources(LocalSearchSolver_example_batch_scheduling_total_weighted_tardiness_main PRIVATE
    batch_scheduling_total_weighted_tardiness_main.cpp)
target_link_libraries(LocalSearchSolver_example_batch_scheduling_total_weighted_tardiness_main PUBLIC
    LocalSearchSolver_example_batch_scheduling_total_weighted_tardiness
    Boost::program_options)
set_target_properties(LocalSearchSolver_example_batch_scheduling_total_weighted_tardiness_main PROPERTIES OUTPUT_NAME "localsearchsolver_batch_scheduling_total_weighted_tardiness")
install(TARGETS LocalSearchSolver_example_batch_scheduling_total_weighted_tardiness_main)
